--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "process-logs": "node scripts/processLogs.js"
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.33.0",
+    "dotenv": "^17.3.1",
     "firebase": "^12.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
